Adding KYC Submit route to swagger using multipart form data
